parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    printx
    scanx

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     binary_operator -> v_expr plus v_expr
Rule 3     binary_operator -> v_expr minus v_expr
Rule 4     binary_operator -> v_expr star v_expr
Rule 5     binary_operator -> v_expr div v_expr
Rule 6     program -> class_expresion semicolon program_a
Rule 7     program_a -> class_expresion semicolon program_a
Rule 8     program_a -> empty
Rule 9     neg -> not idx
Rule 10    compl -> complement idx
Rule 11    assign_expresion -> idx assign expr
Rule 12    declare_expresion -> idx doubledot idx assign expr
Rule 13    declare_expresion -> idx doubledot idx
Rule 14    declare_method -> idx doubledot idx
Rule 15    new_expresion -> new idx
Rule 16    class_expresion -> class white_space idx ocurly feature
Rule 17    class_expresion -> class idx inherits idx ocurly feature
Rule 18    feature -> method_decl feature
Rule 19    feature -> property_decl feature
Rule 20    feature -> ccurly
Rule 21    method_decl -> idx obracket formal cbracket doubledot idx ocurly expr ccurly semicolon feature
Rule 22    formal -> declare_method formal_a
Rule 23    formal -> empty
Rule 24    formal_a -> comma declare_method formal_a
Rule 25    formal_a -> empty
Rule 26    expr -> assign_expresion
Rule 27    expr -> while_expresion
Rule 28    expr -> v_expr
Rule 29    comparison_expresion -> v_expr less v_expr
Rule 30    comparison_expresion -> v_expr less_equal v_expr
Rule 31    comparison_expresion -> v_expr equal v_expr
Rule 32    v_expr -> conditional_expresion
Rule 33    v_expr -> let_expresion
Rule 34    v_expr -> case_expresion
Rule 35    v_expr -> dispatch_expresion
Rule 36    v_expr -> dispatch_instance
Rule 37    v_expr -> block_expresion
Rule 38    v_expr -> binary_operator
Rule 39    v_expr -> neg
Rule 40    v_expr -> compl
Rule 41    v_expr -> is_void
Rule 42    v_expr -> new_expresion
Rule 43    v_expr -> obracket v_expr cbracket
Rule 44    v_expr -> term
Rule 45    v_expr -> comparison_expresion
Rule 46    term -> var
Rule 47    term -> num
Rule 48    term -> str
Rule 49    term -> bool
Rule 50    var -> idx
Rule 51    num -> number
Rule 52    str -> string
Rule 53    bool -> true
Rule 54    bool -> false
Rule 55    block_expresion -> ocurly block_expr ccurly
Rule 56    block_expr -> expr semicolon block_expr_a
Rule 57    block_expr_a -> expr semicolon block_expr_a
Rule 58    block_expr_a -> empty
Rule 59    property_decl -> declare_expresion semicolon feature
Rule 60    conditional_expresion -> if v_expr then expr else expr fi
Rule 61    is_void -> isvoid expr
Rule 62    while_expresion -> while v_expr loop expr pool
Rule 63    case_expresion -> case expr of case_list esac
Rule 64    case_list -> declare_method case_expr expr semicolon case_list_a
Rule 65    case_list_a -> declare_method case_expr expr semicolon case_list_a
Rule 66    case_list_a -> empty
Rule 67    let_expresion -> let let_declr_list inx expr
Rule 68    let_declr_list -> declare_expresion let_declr_list_a
Rule 69    let_declr_list_a -> declare_expresion let_declr_list_a
Rule 70    let_declr_list_a -> empty
Rule 71    dispatch_expresion -> idx obracket dispatch_p_list cbracket
Rule 72    dispatch_instance -> idx dot idx obracket dispatch_p_list cbracket
Rule 73    dispatch_instance -> idx arrobe idx dot idx obracket dispatch_p_list cbracket
Rule 74    dispatch_p_list -> v_expr dispatch_p_list
Rule 75    dispatch_p_list -> empty

Terminals, with rules where they appear

arrobe               : 73
assign               : 11 12
case                 : 63
case_expr            : 64 65
cbracket             : 21 43 71 72 73
ccurly               : 20 21 55
class                : 16 17
comma                : 24
complement           : 10
div                  : 5
dot                  : 72 73
doubledot            : 12 13 14 21
else                 : 60
equal                : 31
error                : 
esac                 : 63
false                : 54
fi                   : 60
idx                  : 9 10 11 12 12 13 13 14 14 15 16 17 17 21 21 50 71 72 72 73 73 73
if                   : 60
inherits             : 17
inx                  : 67
isvoid               : 61
less                 : 29
less_equal           : 30
let                  : 67
loop                 : 62
minus                : 3
new                  : 15
not                  : 9
number               : 51
obracket             : 21 43 71 72 73
ocurly               : 16 17 21 55
of                   : 63
plus                 : 2
pool                 : 62
printx               : 
scanx                : 
semicolon            : 6 7 21 56 57 59 64 65
star                 : 4
string               : 52
then                 : 60
true                 : 53
while                : 62
white_space          : 16

Nonterminals, with rules where they appear

assign_expresion     : 26
binary_operator      : 38
block_expr           : 55
block_expr_a         : 56 57
block_expresion      : 37
bool                 : 49
case_expresion       : 34
case_list            : 63
case_list_a          : 64 65
class_expresion      : 6 7
comparison_expresion : 45
compl                : 40
conditional_expresion : 32
declare_expresion    : 59 68 69
declare_method       : 22 24 64 65
dispatch_expresion   : 35
dispatch_instance    : 36
dispatch_p_list      : 71 72 73 74
empty                : 8 23 25 58 66 70 75
expr                 : 11 12 21 56 57 60 60 61 62 63 64 65 67
feature              : 16 17 18 19 21 59
formal               : 21
formal_a             : 22 24
is_void              : 41
let_declr_list       : 67
let_declr_list_a     : 68 69
let_expresion        : 33
method_decl          : 18
neg                  : 39
new_expresion        : 42
num                  : 47
program              : 0
program_a            : 6 7
property_decl        : 19
str                  : 48
term                 : 44
v_expr               : 2 2 3 3 4 4 5 5 28 29 29 30 30 31 31 43 60 62 74
var                  : 46
while_expresion      : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (6) program -> . class_expresion semicolon program_a
    (16) class_expresion -> . class white_space idx ocurly feature
    (17) class_expresion -> . class idx inherits idx ocurly feature

    class           shift and go to state 3

    program                        shift and go to state 1
    class_expresion                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (6) program -> class_expresion . semicolon program_a

    semicolon       shift and go to state 4


state 3

    (16) class_expresion -> class . white_space idx ocurly feature
    (17) class_expresion -> class . idx inherits idx ocurly feature

    white_space     shift and go to state 5
    idx             shift and go to state 6


state 4

    (6) program -> class_expresion semicolon . program_a
    (7) program_a -> . class_expresion semicolon program_a
    (8) program_a -> . empty
    (16) class_expresion -> . class white_space idx ocurly feature
    (17) class_expresion -> . class idx inherits idx ocurly feature
    (1) empty -> .

    class           shift and go to state 3
    $end            reduce using rule 1 (empty -> .)

    class_expresion                shift and go to state 7
    program_a                      shift and go to state 8
    empty                          shift and go to state 9

state 5

    (16) class_expresion -> class white_space . idx ocurly feature

    idx             shift and go to state 10


state 6

    (17) class_expresion -> class idx . inherits idx ocurly feature

    inherits        shift and go to state 11


state 7

    (7) program_a -> class_expresion . semicolon program_a

    semicolon       shift and go to state 12


state 8

    (6) program -> class_expresion semicolon program_a .

    $end            reduce using rule 6 (program -> class_expresion semicolon program_a .)


state 9

    (8) program_a -> empty .

    $end            reduce using rule 8 (program_a -> empty .)


state 10

    (16) class_expresion -> class white_space idx . ocurly feature

    ocurly          shift and go to state 13


state 11

    (17) class_expresion -> class idx inherits . idx ocurly feature

    idx             shift and go to state 14


state 12

    (7) program_a -> class_expresion semicolon . program_a
    (7) program_a -> . class_expresion semicolon program_a
    (8) program_a -> . empty
    (16) class_expresion -> . class white_space idx ocurly feature
    (17) class_expresion -> . class idx inherits idx ocurly feature
    (1) empty -> .

    class           shift and go to state 3
    $end            reduce using rule 1 (empty -> .)

    class_expresion                shift and go to state 7
    program_a                      shift and go to state 15
    empty                          shift and go to state 9

state 13

    (16) class_expresion -> class white_space idx ocurly . feature
    (18) feature -> . method_decl feature
    (19) feature -> . property_decl feature
    (20) feature -> . ccurly
    (21) method_decl -> . idx obracket formal cbracket doubledot idx ocurly expr ccurly semicolon feature
    (59) property_decl -> . declare_expresion semicolon feature
    (12) declare_expresion -> . idx doubledot idx assign expr
    (13) declare_expresion -> . idx doubledot idx

    ccurly          shift and go to state 20
    idx             shift and go to state 16

    feature                        shift and go to state 17
    method_decl                    shift and go to state 18
    property_decl                  shift and go to state 19
    declare_expresion              shift and go to state 21

state 14

    (17) class_expresion -> class idx inherits idx . ocurly feature

    ocurly          shift and go to state 22


state 15

    (7) program_a -> class_expresion semicolon program_a .

    $end            reduce using rule 7 (program_a -> class_expresion semicolon program_a .)


state 16

    (21) method_decl -> idx . obracket formal cbracket doubledot idx ocurly expr ccurly semicolon feature
    (12) declare_expresion -> idx . doubledot idx assign expr
    (13) declare_expresion -> idx . doubledot idx

    obracket        shift and go to state 23
    doubledot       shift and go to state 24


state 17

    (16) class_expresion -> class white_space idx ocurly feature .

    semicolon       reduce using rule 16 (class_expresion -> class white_space idx ocurly feature .)


state 18

    (18) feature -> method_decl . feature
    (18) feature -> . method_decl feature
    (19) feature -> . property_decl feature
    (20) feature -> . ccurly
    (21) method_decl -> . idx obracket formal cbracket doubledot idx ocurly expr ccurly semicolon feature
    (59) property_decl -> . declare_expresion semicolon feature
    (12) declare_expresion -> . idx doubledot idx assign expr
    (13) declare_expresion -> . idx doubledot idx

    ccurly          shift and go to state 20
    idx             shift and go to state 16

    method_decl                    shift and go to state 18
    feature                        shift and go to state 25
    property_decl                  shift and go to state 19
    declare_expresion              shift and go to state 21

state 19

    (19) feature -> property_decl . feature
    (18) feature -> . method_decl feature
    (19) feature -> . property_decl feature
    (20) feature -> . ccurly
    (21) method_decl -> . idx obracket formal cbracket doubledot idx ocurly expr ccurly semicolon feature
    (59) property_decl -> . declare_expresion semicolon feature
    (12) declare_expresion -> . idx doubledot idx assign expr
    (13) declare_expresion -> . idx doubledot idx

    ccurly          shift and go to state 20
    idx             shift and go to state 16

    property_decl                  shift and go to state 19
    feature                        shift and go to state 26
    method_decl                    shift and go to state 18
    declare_expresion              shift and go to state 21

state 20

    (20) feature -> ccurly .

    semicolon       reduce using rule 20 (feature -> ccurly .)
    ccurly          reduce using rule 20 (feature -> ccurly .)
    idx             reduce using rule 20 (feature -> ccurly .)


state 21

    (59) property_decl -> declare_expresion . semicolon feature

    semicolon       shift and go to state 27


state 22

    (17) class_expresion -> class idx inherits idx ocurly . feature
    (18) feature -> . method_decl feature
    (19) feature -> . property_decl feature
    (20) feature -> . ccurly
    (21) method_decl -> . idx obracket formal cbracket doubledot idx ocurly expr ccurly semicolon feature
    (59) property_decl -> . declare_expresion semicolon feature
    (12) declare_expresion -> . idx doubledot idx assign expr
    (13) declare_expresion -> . idx doubledot idx

    ccurly          shift and go to state 20
    idx             shift and go to state 16

    feature                        shift and go to state 28
    method_decl                    shift and go to state 18
    property_decl                  shift and go to state 19
    declare_expresion              shift and go to state 21

state 23

    (21) method_decl -> idx obracket . formal cbracket doubledot idx ocurly expr ccurly semicolon feature
    (22) formal -> . declare_method formal_a
    (23) formal -> . empty
    (14) declare_method -> . idx doubledot idx
    (1) empty -> .

    idx             shift and go to state 29
    cbracket        reduce using rule 1 (empty -> .)

    formal                         shift and go to state 30
    declare_method                 shift and go to state 31
    empty                          shift and go to state 32

state 24

    (12) declare_expresion -> idx doubledot . idx assign expr
    (13) declare_expresion -> idx doubledot . idx

    idx             shift and go to state 33


state 25

    (18) feature -> method_decl feature .

    semicolon       reduce using rule 18 (feature -> method_decl feature .)
    ccurly          reduce using rule 18 (feature -> method_decl feature .)
    idx             reduce using rule 18 (feature -> method_decl feature .)


state 26

    (19) feature -> property_decl feature .

    semicolon       reduce using rule 19 (feature -> property_decl feature .)
    ccurly          reduce using rule 19 (feature -> property_decl feature .)
    idx             reduce using rule 19 (feature -> property_decl feature .)


state 27

    (59) property_decl -> declare_expresion semicolon . feature
    (18) feature -> . method_decl feature
    (19) feature -> . property_decl feature
    (20) feature -> . ccurly
    (21) method_decl -> . idx obracket formal cbracket doubledot idx ocurly expr ccurly semicolon feature
    (59) property_decl -> . declare_expresion semicolon feature
    (12) declare_expresion -> . idx doubledot idx assign expr
    (13) declare_expresion -> . idx doubledot idx

    ccurly          shift and go to state 20
    idx             shift and go to state 16

    declare_expresion              shift and go to state 21
    feature                        shift and go to state 34
    method_decl                    shift and go to state 18
    property_decl                  shift and go to state 19

state 28

    (17) class_expresion -> class idx inherits idx ocurly feature .

    semicolon       reduce using rule 17 (class_expresion -> class idx inherits idx ocurly feature .)


state 29

    (14) declare_method -> idx . doubledot idx

    doubledot       shift and go to state 35


state 30

    (21) method_decl -> idx obracket formal . cbracket doubledot idx ocurly expr ccurly semicolon feature

    cbracket        shift and go to state 36


state 31

    (22) formal -> declare_method . formal_a
    (24) formal_a -> . comma declare_method formal_a
    (25) formal_a -> . empty
    (1) empty -> .

    comma           shift and go to state 38
    cbracket        reduce using rule 1 (empty -> .)

    formal_a                       shift and go to state 37
    empty                          shift and go to state 39

state 32

    (23) formal -> empty .

    cbracket        reduce using rule 23 (formal -> empty .)


state 33

    (12) declare_expresion -> idx doubledot idx . assign expr
    (13) declare_expresion -> idx doubledot idx .

    assign          shift and go to state 40
    semicolon       reduce using rule 13 (declare_expresion -> idx doubledot idx .)
    idx             reduce using rule 13 (declare_expresion -> idx doubledot idx .)
    inx             reduce using rule 13 (declare_expresion -> idx doubledot idx .)


state 34

    (59) property_decl -> declare_expresion semicolon feature .

    ccurly          reduce using rule 59 (property_decl -> declare_expresion semicolon feature .)
    idx             reduce using rule 59 (property_decl -> declare_expresion semicolon feature .)


state 35

    (14) declare_method -> idx doubledot . idx

    idx             shift and go to state 41


state 36

    (21) method_decl -> idx obracket formal cbracket . doubledot idx ocurly expr ccurly semicolon feature

    doubledot       shift and go to state 42


state 37

    (22) formal -> declare_method formal_a .

    cbracket        reduce using rule 22 (formal -> declare_method formal_a .)


state 38

    (24) formal_a -> comma . declare_method formal_a
    (14) declare_method -> . idx doubledot idx

    idx             shift and go to state 29

    declare_method                 shift and go to state 43

state 39

    (25) formal_a -> empty .

    cbracket        reduce using rule 25 (formal_a -> empty .)


state 40

    (12) declare_expresion -> idx doubledot idx assign . expr
    (26) expr -> . assign_expresion
    (27) expr -> . while_expresion
    (28) expr -> . v_expr
    (11) assign_expresion -> . idx assign expr
    (62) while_expresion -> . while v_expr loop expr pool
    (32) v_expr -> . conditional_expresion
    (33) v_expr -> . let_expresion
    (34) v_expr -> . case_expresion
    (35) v_expr -> . dispatch_expresion
    (36) v_expr -> . dispatch_instance
    (37) v_expr -> . block_expresion
    (38) v_expr -> . binary_operator
    (39) v_expr -> . neg
    (40) v_expr -> . compl
    (41) v_expr -> . is_void
    (42) v_expr -> . new_expresion
    (43) v_expr -> . obracket v_expr cbracket
    (44) v_expr -> . term
    (45) v_expr -> . comparison_expresion
    (60) conditional_expresion -> . if v_expr then expr else expr fi
    (67) let_expresion -> . let let_declr_list inx expr
    (63) case_expresion -> . case expr of case_list esac
    (71) dispatch_expresion -> . idx obracket dispatch_p_list cbracket
    (72) dispatch_instance -> . idx dot idx obracket dispatch_p_list cbracket
    (73) dispatch_instance -> . idx arrobe idx dot idx obracket dispatch_p_list cbracket
    (55) block_expresion -> . ocurly block_expr ccurly
    (2) binary_operator -> . v_expr plus v_expr
    (3) binary_operator -> . v_expr minus v_expr
    (4) binary_operator -> . v_expr star v_expr
    (5) binary_operator -> . v_expr div v_expr
    (9) neg -> . not idx
    (10) compl -> . complement idx
    (61) is_void -> . isvoid expr
    (15) new_expresion -> . new idx
    (46) term -> . var
    (47) term -> . num
    (48) term -> . str
    (49) term -> . bool
    (29) comparison_expresion -> . v_expr less v_expr
    (30) comparison_expresion -> . v_expr less_equal v_expr
    (31) comparison_expresion -> . v_expr equal v_expr
    (50) var -> . idx
    (51) num -> . number
    (52) str -> . string
    (53) bool -> . true
    (54) bool -> . false

    idx             shift and go to state 44
    while           shift and go to state 49
    obracket        shift and go to state 61
    if              shift and go to state 64
    let             shift and go to state 65
    case            shift and go to state 66
    ocurly          shift and go to state 67
    not             shift and go to state 68
    complement      shift and go to state 69
    isvoid          shift and go to state 70
    new             shift and go to state 71
    number          shift and go to state 76
    string          shift and go to state 77
    true            shift and go to state 78
    false           shift and go to state 79

    expr                           shift and go to state 45
    assign_expresion               shift and go to state 46
    while_expresion                shift and go to state 47
    v_expr                         shift and go to state 48
    conditional_expresion          shift and go to state 50
    let_expresion                  shift and go to state 51
    case_expresion                 shift and go to state 52
    dispatch_expresion             shift and go to state 53
    dispatch_instance              shift and go to state 54
    block_expresion                shift and go to state 55
    binary_operator                shift and go to state 56
    neg                            shift and go to state 57
    compl                          shift and go to state 58
    is_void                        shift and go to state 59
    new_expresion                  shift and go to state 60
    term                           shift and go to state 62
    comparison_expresion           shift and go to state 63
    var                            shift and go to state 72
    num                            shift and go to state 73
    str                            shift and go to state 74
    bool                           shift and go to state 75

state 41

    (14) declare_method -> idx doubledot idx .

    comma           reduce using rule 14 (declare_method -> idx doubledot idx .)
    cbracket        reduce using rule 14 (declare_method -> idx doubledot idx .)
    case_expr       reduce using rule 14 (declare_method -> idx doubledot idx .)


state 42

    (21) method_decl -> idx obracket formal cbracket doubledot . idx ocurly expr ccurly semicolon feature

    idx             shift and go to state 80


state 43

    (24) formal_a -> comma declare_method . formal_a
    (24) formal_a -> . comma declare_method formal_a
    (25) formal_a -> . empty
    (1) empty -> .

    comma           shift and go to state 38
    cbracket        reduce using rule 1 (empty -> .)

    formal_a                       shift and go to state 81
    empty                          shift and go to state 39

state 44

    (11) assign_expresion -> idx . assign expr
    (71) dispatch_expresion -> idx . obracket dispatch_p_list cbracket
    (72) dispatch_instance -> idx . dot idx obracket dispatch_p_list cbracket
    (73) dispatch_instance -> idx . arrobe idx dot idx obracket dispatch_p_list cbracket
    (50) var -> idx .

  ! shift/reduce conflict for obracket resolved as shift
    assign          shift and go to state 82
    obracket        shift and go to state 83
    dot             shift and go to state 84
    arrobe          shift and go to state 85
    plus            reduce using rule 50 (var -> idx .)
    minus           reduce using rule 50 (var -> idx .)
    star            reduce using rule 50 (var -> idx .)
    div             reduce using rule 50 (var -> idx .)
    less            reduce using rule 50 (var -> idx .)
    less_equal      reduce using rule 50 (var -> idx .)
    equal           reduce using rule 50 (var -> idx .)
    semicolon       reduce using rule 50 (var -> idx .)
    idx             reduce using rule 50 (var -> idx .)
    inx             reduce using rule 50 (var -> idx .)
    of              reduce using rule 50 (var -> idx .)
    loop            reduce using rule 50 (var -> idx .)
    cbracket        reduce using rule 50 (var -> idx .)
    then            reduce using rule 50 (var -> idx .)
    ccurly          reduce using rule 50 (var -> idx .)
    pool            reduce using rule 50 (var -> idx .)
    else            reduce using rule 50 (var -> idx .)
    if              reduce using rule 50 (var -> idx .)
    let             reduce using rule 50 (var -> idx .)
    case            reduce using rule 50 (var -> idx .)
    ocurly          reduce using rule 50 (var -> idx .)
    not             reduce using rule 50 (var -> idx .)
    complement      reduce using rule 50 (var -> idx .)
    isvoid          reduce using rule 50 (var -> idx .)
    new             reduce using rule 50 (var -> idx .)
    number          reduce using rule 50 (var -> idx .)
    string          reduce using rule 50 (var -> idx .)
    true            reduce using rule 50 (var -> idx .)
    false           reduce using rule 50 (var -> idx .)
    fi              reduce using rule 50 (var -> idx .)

  ! obracket        [ reduce using rule 50 (var -> idx .) ]


state 45

    (12) declare_expresion -> idx doubledot idx assign expr .

    semicolon       reduce using rule 12 (declare_expresion -> idx doubledot idx assign expr .)
    idx             reduce using rule 12 (declare_expresion -> idx doubledot idx assign expr .)
    inx             reduce using rule 12 (declare_expresion -> idx doubledot idx assign expr .)


state 46

    (26) expr -> assign_expresion .
